--- a/src/index.html
+++ b/src/index.html
@@ -38,38 +38,7 @@
     </div>
     <div class="films">
       <h1 class="films__title">Playing Now</h1>
-      <div class="slider slider_films">
-        <div class="slider__content">
-          <ul class="slider__list">
-            <li class="slider__item">
-              <a class="slider__link" href="/joker"
-                ><img class="slider__img" src="assets/joker.jpeg" alt="poster"
-              /></a>
-            </li>
-            <li class="slider__item">
-              <a class="slider__link slider__link_active" href="/vechnye"
-                ><img
-                  class="slider__img slider__img_active"
-                  src="assets/vechnye.jpeg"
-                  alt="poster"
-              /></a>
-            </li>
-            <li class="slider__item">
-              <a class="slider__link" href="/enounter"
-                ><img
-                  class="slider__img"
-                  src="assets/encounter.jpeg"
-                  alt="poster"
-              /></a>
-            </li>
-          </ul>
-        </div>
-        <div class="slider__navigation">
-          <div class="slider__dote"></div>
-          <div class="slider__dote slider__dote_active"></div>
-          <div class="slider__dote"></div>
-        </div>
-      </div>
+      <div class="slider slider_films"></div>
     </div>
     <div class="promo">
       <h1 class="promo__title">Promo</h1>
@@ -103,6 +72,6 @@
         ><span class="icon icon_profile"><i class="fas fa-user"></i></span
       ></a>
     </footer>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
   </body>
 </html>
