create webpack for details

--- a/webpack/src/details/details.html
+++ b/webpack/src/details/details.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./details/details-style.css" />
+    <link rel="stylesheet" href="./details-style.less" />
     <title>Document</title>
   </head>
   <body>
@@ -52,5 +52,6 @@
       <button class="controll__button" type="button">Watch Trailer</button>
       <a href="/byticket" class="controll__link">Get Ticket</a>
     </div>
+    <script src="app.ts"></script>
   </body>
 </html>
