--- a/webpack/src/details/details.html
+++ b/webpack/src/details/details.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./details-style.less" />
     <title>Document</title>
   </head>
   <body>
@@ -15,7 +14,7 @@
       <h1 class="header__title">Movie Detail</h1>
     </header>
     <div class="info">
-      <div class="blocks">
+      <!-- <div class="blocks">
         <img class="blocks__img" src="assets/vechnye.jpeg" alt="vechnye" />
         <ul class="blocks__list">
           <li class="blocks__item">
@@ -35,8 +34,8 @@
           </li>
         </ul>
       </div>
-      <h1 class="info__title">Eternals</h1>
-      <div class="info__devider"></div>
+      <h1 class="info__title">Eternals</h1> -->
+      <!-- <div class="info__devider"></div> -->
     </div>
     <div class="synopsis">
       <h1 class="synopsis__title">Synopsis</h1>
@@ -52,6 +51,5 @@
       <button class="controll__button" type="button">Watch Trailer</button>
       <a href="/byticket" class="controll__link">Get Ticket</a>
     </div>
-    <script src="app.ts"></script>
   </body>
 </html>
