--- a/webpack/src/details/details.html
+++ b/webpack/src/details/details.html
@@ -8,22 +8,13 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__link" href="/home">
+      <a class="header__link" href="./index.html">
         <i class="fas fa-arrow-left"></i>
       </a>
       <h1 class="header__title">Movie Detail</h1>
     </header>
     <div class="info"></div>
-    <div class="synopsis">
-      <h1 class="synopsis__title">Synopsis</h1>
-      <p class="synopsis__paragraph">
-        The fate of humanity lies in their hands.Marvel Studios? ?Eternals?
-        welcomes an existing new team of Super Heroes to the Marvel Cinematic
-        Universe.The epic story, spanning thousends of years, features a group
-        of immortal heroes forced out of the shadows to reunite against
-        mankind?s oldest enemy, The Deviants.
-      </p>
-    </div>
+    <div class="synopsis"></div>
     <div class="controll">
       <button class="controll__button" type="button">Watch Trailer</button>
       <a href="/byticket" class="controll__link">Get Ticket</a>
