update clider and renderOfComponents

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
+      <!-- <header class="header">
         <div class="header__discription">
           <h1 class="header__title">Hello Ihza</h1>
           <p class="header__city">
@@ -57,7 +57,7 @@
           ><i class="fas fa-ticket-alt"></i
         ></a>
         <a href="/user" class="footer__link"><i class="fas fa-user"></i></a>
-      </footer>
+      </footer> -->
     </div>
   </body>
 </html>
